remove all mention of annotations

--- a/dist.ini
+++ b/dist.ini
@@ -24,7 +24,7 @@ Module::Runtime        = 0
 MOP                    = 0.04
 BEGIN::Lift            = 0.04
 B::CompilerPhase::Hook = 0.03
-Method::Annotation     = 0.01
+Method::Traits         = 0.01
 
 [Prereqs / TestRequires]
 Test::More  = 0
