--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,7 @@ version = 0.01
 repository.url    = https://github.com/stevan/p5-Moxie.git
 repository.web    = https://github.com/stevan/p5-Moxie
 repository.type   = git
+bugtracker.web    = https://github.com/stevan/p5-Moxie/issues
 
 [Prereqs]
 perl                   = v5.22
