making sure we have the right version of UNIVESAL::Object

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ bugtracker.web    = https://github.com/stevan/p5-Moxie/issues
 perl                   = v5.22
 experimental           = 0
 Module::Runtime        = 0
+UNIVERSAL::Object      = 0.08
 MOP                    = 0.05
 BEGIN::Lift            = 0.04
 B::CompilerPhase::Hook = 0.04
