--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ bugtracker.web    = https://github.com/stevan/p5-Moxie/issues
 perl                   = v5.22
 experimental           = 0
 Module::Runtime        = 0
+Sub::Util              = 0
 UNIVERSAL::Object      = 0.09
 MOP                    = 0.07
 BEGIN::Lift            = 0.04
