--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,13 @@ license          = Perl_5
 copyright_holder = Stevan Little
 copyright_year   = 2017
 
-version = 0.01
+version = 0.02
 
 [@Basic]
 
 [TestRelease]
 [ConfirmRelease]
+[MetaProvides::Package]
 [PodWeaver]
 
 [MetaResources]
@@ -23,8 +24,9 @@ perl                   = v5.22
 experimental           = 0
 Module::Runtime        = 0
 Sub::Util              = 0
-UNIVERSAL::Object      = 0.09
-MOP                    = 0.06
+PadWalker              = 0
+UNIVERSAL::Object      = 0.11
+MOP                    = 0.07
 BEGIN::Lift            = 0.04
 B::CompilerPhase::Hook = 0.04
 Method::Traits         = 0.04
