--- a/dist.ini
+++ b/dist.ini
@@ -20,16 +20,16 @@ repository.type   = git
 bugtracker.web    = https://github.com/stevan/p5-Moxie/issues
 
 [Prereqs]
-perl                   = v5.22
-experimental           = 0
-Module::Runtime        = 0
-Sub::Util              = 0
-PadWalker              = 0
-UNIVERSAL::Object      = 0.11
-MOP                    = 0.08
-BEGIN::Lift            = 0.06
-B::CompilerPhase::Hook = 0.04
-Method::Traits         = 0.05
+perl              = v5.22
+experimental      = 0
+Module::Runtime   = 0
+Sub::Util         = 0
+PadWalker         = 0
+Devel::Hook       = 0
+UNIVERSAL::Object = 0.11
+MOP               = 0.08
+BEGIN::Lift       = 0.06
+Method::Traits    = 0.05
 
 [Prereqs / TestRequires]
 Test::More  = 0
