--- a/dist.ini
+++ b/dist.ini
@@ -23,9 +23,9 @@ bugtracker.web    = https://github.com/stevan/p5-Moxie/issues
 perl              = v5.22
 experimental      = 0
 Module::Runtime   = 0
-Sub::Util         = 0
-PadWalker         = 0
 Devel::Hook       = 0
+Sub::Util         = 0
+Sub::Inject       = 0
 UNIVERSAL::Object = 0.11
 MOP               = 0.08
 BEGIN::Lift       = 0.06
