- Autogenerate META.json using dzil plugin [MetaJSON] as suggested by CPANTS.

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ version = 0.04
 [ConfirmRelease]
 [MetaProvides::Package]
 [PodWeaver]
+[MetaJSON]
 
 [MetaResources]
 repository.url    = https://github.com/stevan/p5-Moxie.git
