re-add Padwalker

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,7 @@ perl              = v5.22
 experimental      = 0
 Module::Runtime   = 0
 Sub::Util         = 0
+PadWalker         = 0
 UNIVERSAL::Object = 0.12
 MOP               = 0.10
 BEGIN::Lift       = 0.06
