adding in Travis CI support

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ version = 0.07
 [MetaProvides::Package]
 [PodWeaver]
 [MetaJSON]
+[TravisYML]
 
 [MetaResources]
 repository.url    = https://github.com/stevan/p5-Moxie.git
